--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello there
+<html>
+<head>
+<script src="js/lib/jquery-2.0.3.min.js"></script>
+<script src="js/lib/firebase.js"></script>
+<script src="js/lib/firebase-auth.js"></script>
+<script src="js/lib/firebase-firestore.js"></script>
+<script src="js/lib/firebase-database.js"></script>
+<script src="popup.js"></script>
+</head>
+<body>
+  <div class="content">Figuring it out...</div>
+</body>
+</html>
