--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="js/lib/firebase-auth.js"></script>
 <script src="js/lib/firebase-firestore.js"></script>
 <script src="js/lib/firebase-database.js"></script>
-<script src="popup.js"></script>
+<script src="start.js"></script>
 </head>
 <body>
   <div class="content">Figuring it out...</div>
