--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <script src="start.js"></script>
 </head>
 <body>
-  <div class="content">Figuring it out...</div>
+  <div class="content">Hello there...</div>
 </body>
 </html>
