--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<script src="js/lib/jquery-2.0.3.min.js"></script>
-<script src="js/lib/firebase.js"></script>
-<script src="js/lib/firebase-auth.js"></script>
-<script src="js/lib/firebase-firestore.js"></script>
-<script src="js/lib/firebase-database.js"></script>
+<script src="jquery-2.0.3.min.js"></script>
+<script src="firebase.js"></script>
+<script src="firebase-auth.js"></script>
+<script src="firebase-firestore.js"></script>
+<script src="firebase-database.js"></script>
 <script src="start.js"></script>
 </head>
 <body>
-  <div class="content">Hello there...</div>
+  <div class="content">Hello there....</div>
 </body>
 </html>
