--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 <script src="jquery-2.0.3.min.js"></script>
-<!-- <script src="firebase.js"></script>
+<script src="firebase.js"></script>
 <script src="firebase-auth.js"></script>
 <script src="firebase-firestore.js"></script>
-<script src="firebase-database.js"></script> -->
+<script src="firebase-database.js"></script>
 <script src="start.js"></script>
 </head>
 <body>
