--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <script src="start.js"></script>
 </head>
 <body>
-  <div class="content">Initializing...<span id="em"></span><span id="pw"></span></div>
+  <div class="content">Initialized....<span id="em"></span><span id="pw"></span></div>
 </body>
 </html>
