--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <script src="start.js"></script>
 </head>
 <body>
-  <div class="content">This will be our Keychain Chrome Ext Store rate link...<span id="em"></span><span id="pw"></span></div>
+  <div class="content">This will be our <b>Keychain Chrome Extension Store rate</b> link...<span id="em"></span><span id="pw"></span></div>
 </body>
 </html>
